--- a/jun_springboot_admin/src/main/resources/template/list.html.vm
+++ b/jun_springboot_admin/src/main/resources/template/list.html.vm
@@ -15,25 +15,31 @@
 <form class="layui-form " action="" lay-filter="info" style="width: 700px;margin-top: 10px">
 #foreach($column in $columns)
   #if($column.columnName == $pk.columnName)
-    <input name="${column.attrname}" hidden/>
+    <input name="${column.attrname}" id="${column.attrname}" hidden/>
   #else
-    <div class="layui-form-item">
-      <label class="layui-form-label #if($column.isNull == 'NO') layui-required #end ">${column.comments}</label>
+    <div class="layui-form-item" #if($column.columnName == $pk.columnName) ,hide:true #end >
+      <label class="layui-form-label #if($column.comments=='') style="display:none" #end ">${column.comments}</label>
       <div class="layui-input-block">
+##if($column.columnName.toString().contains("dict_"))
 #if($column.dataType == 'datetime')
 	<input type="${column.attrname}" name="${column.attrname}" id="date" lay-verify="#if($column.isNull == 'NO')required|#end date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
 #elseif($column.dataType == 'text')
 	<textarea placeholder="请输入内容" class="layui-textarea" name="${column.attrname}"></textarea>
+#elseif($column.columnName.toString().contains("dict_"))
+	<select id="${column.attrname}" name="${column.attrname}" lay-filter="select-type" th:with="type=${@sysDictService.getType('${column.columnName}')}">
+        <option value="0">请选择</option>
+        <option th:each="dict : ${type}" th:text="${dict.label}" th:value="${dict.value}"></option>
+    </select>
 #else
 	#if($column.isNull == 'NO') 
 	<input type="${column.attrname}" name="${column.attrname}"  lay-verify="required|${column.attrname}" lay-max="${column.maxLength}"   placeholder="请输入${column.comments}"  autocomplete="off" class="layui-input">
 	#else
-	<input type="text" name="${column.attrname}"  placeholder="请输入${column.attrname}" autocomplete="off" class="layui-input">
+	<input type="text" name="${column.attrname}"  placeholder="请输入${column.comments}" autocomplete="off" class="layui-input">
 	#end
 #end
       </div>
     </div>
-  #end
+#end
 #end
 <div class="layui-form-item">
   <div class="layui-input-block">
@@ -115,7 +121,16 @@
         [
           {type: 'checkbox', fixed: 'left'},
 	#foreach($column in $columns)
-          {field: '${column.attrname}', title: '${column.comments}', sort: true #if($column.columnName == $pk.columnName) ,hide:true #end},
+          {field: '${column.attrname}', title: '${column.comments}', sort: true 
+          	#if($column.columnName == $pk.columnName) ,hide:true #end
+          	#if($column.columnName.toString().contains("dict_"))
+          		, templet: function (item) {
+                        //获取类型对应的字典label
+                        var datas = "[[${@sysDictService.getType('${column.attrname}')}]]".replace(/&quot;/g,"\"");
+                        return CoreUtil.selectDictLabel(datas, item.${column.attrname});
+                        }
+          	#end
+          	},
           
 	#end
           {width: 120, toolbar: "#tool", title: '操作'}
