--- a/jun_springboot_admin/src/main/resources/template/Entity.java.vm
+++ b/jun_springboot_admin/src/main/resources/template/Entity.java.vm
@@ -7,6 +7,7 @@ import com.jun.plugin.system.entity.BaseEntity;
 import org.springframework.data.annotation.Id;
 
 #if(${hasBigDecimal})
+import java.math.BigDecimal;
 #end
 import java.io.Serializable;
 import java.util.Date;
