--- a/jun_springboot_admin/src/main/resources/templates/bizcustomertest/list.html
+++ b/jun_springboot_admin/src/main/resources/templates/bizcustomertest/list.html
@@ -6,6 +6,16 @@
   <title>Title</title>
   <link rel="stylesheet" href="/layui/css/layui.css">
   <link rel="stylesheet" href="/css/custom.form.css">
+    <style>
+		element.style { width: 180px; }
+				.layui-form-label.layui-required:after{
+	        content:"*";
+	        color:red;
+	        position: absolute;
+	        top:10px;
+	        left:24px;
+	    }
+  </style>
 </head>
 <body>
 <!-- 新增修改的DIV页面-begin,默认hidden -->
@@ -13,44 +23,34 @@
   <div class="panel-heading title"></div>
 <div class="layui-card-body">
 <form class="layui-form " action="" lay-filter="info" style="width: 700px;margin-top: 10px">
-    <input name="id" id="id" hidden/>
+      <input name="id" id="id" hidden/>
         <div class="layui-form-item"  >
-      <label class="layui-form-label  ">客户名称</label>
+      <label class="layui-form-label  layui-required ">客户名称</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id isn't dict_</p>
--->
-
-		<input type="cusname" name="cusname"  lay-verify="required|cusname" lay-max="16"   placeholder="请输入客户名称"  autocomplete="off" class="layui-input">
+		<input type="cusname" name="cusname"  id="cusname"  lay-verify="required|cusname" lay-max="16"   placeholder="请输入客户名称"  autocomplete="off" class="layui-input">
+	      </div>
+    </div>
+      <div class="layui-form-item"  >
+      <label class="layui-form-label  ">注册金额</label>
+      <div class="layui-input-block">
+		<input type="text" name="money"  id="money"  placeholder="请输入注册金额" autocomplete="off" class="layui-input">
 	      </div>
     </div>
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">客户描述</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id isn't dict_</p>
--->
-
-		<input type="cusdesc" name="cusdesc"  lay-verify="required|cusdesc" lay-max="255"   placeholder="请输入客户描述"  autocomplete="off" class="layui-input">
+		<input type="cusdesc" name="cusdesc"  id="cusdesc"  lay-verify="required|cusdesc" lay-max="255"   placeholder="请输入客户描述"  autocomplete="off" class="layui-input">
 	      </div>
     </div>
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">客户全称</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id isn't dict_</p>
--->
-
-		<input type="text" name="fullname"  placeholder="请输入客户全称" autocomplete="off" class="layui-input">
+		<input type="text" name="fullname"  id="fullname"  placeholder="请输入客户全称" autocomplete="off" class="layui-input">
 	      </div>
     </div>
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">客户性质</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id is dict_</p>
--->
-
 	<select id="dictCussex" name="dictCussex" lay-filter="select-type" th:with="type=${@sysDictService.getType('dict_cussex')}">
         <option value="0">请选择</option>
         <option th:each="dict : ${type}" th:text="${dict.label}" th:value="${dict.value}"></option>
@@ -60,44 +60,22 @@
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">注册时间</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id isn't dict_</p>
--->
-
-	<input type="registerDate" name="registerDate" id="date" lay-verify="required| date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+	<input type="registerDate" name="registerDate"  id="registerDate" lay-verify="required| date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
       </div>
     </div>
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">客户类型</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id is dict_</p>
--->
-
 	<select id="dictCustype" name="dictCustype" lay-filter="select-type" th:with="type=${@sysDictService.getType('dict_custype')}">
         <option value="0">请选择</option>
         <option th:each="dict : ${type}" th:text="${dict.label}" th:value="${dict.value}"></option>
     </select>
       </div>
-      <div class="layui-form-item">
-    <label class="layui-form-label">上传图片</label>
-    <div class="layui-input-inline">
-        <button type="button" class="layui-btn upload-image" name="image[]" up-field="path" up-url="/upload/image">
-            <i class="layui-icon"></i>上传图片
-        </button>
-    </div>
-    <div class="upload-show"></div>
-</div>
-      
     </div>
       <div class="layui-form-item"  >
       <label class="layui-form-label  ">备注</label>
       <div class="layui-input-block">
-<!--
-<p>The article content id isn't dict_</p>
--->
-
-	<textarea placeholder="请输入内容" class="layui-textarea" name="remark"></textarea>
+	<textarea placeholder="请输入内容" class="layui-textarea" name="remark"  id="remark"></textarea>
       </div>
     </div>
 <div class="layui-form-item">
@@ -156,10 +134,19 @@
   var layedit = layui.layedit;
   var $ = jQuery = layui.jquery;
   var laydate = layui.laydate;
+  var numberInput = layui.numberInput;
   //定义lay全局对象
 
-  layui.use(['table', 'layer', 'laydate' ,'form', 'layedit'], function () {
-
+  layui.config({
+        base: '/layui-ext/'
+    }).extend({
+        treetable: 'treetable-lay/treetable',
+        iconPicker: 'icon/iconPicker',
+        tableSelected: "tableSelected/index",
+        numberInput: 'numberInput/js/index'
+    }).use(['numberInput','table', 'layer', 'laydate' ,'form', 'layedit'], function () {
+	numberInput = layui.numberInput;
+	
     //加载table
     tableIns1 = table.render({
       elem: '#showTable'
@@ -178,52 +165,43 @@
       }
       , cols: [
         [
-          {type: 'checkbox', fixed: 'left'},
-	          {field: 'id', title: '', sort: true 
-          	 ,hide:true           	          	},
-          
-	          {field: 'cusname', title: '客户名称', sort: true 
-          	          	          	},
-          
-	          {field: 'cusdesc', title: '客户描述', sort: true 
-          	          	          	},
-          
-	          {field: 'fullname', title: '客户全称', sort: true 
-          	          	          	},
-          
-	          {field: 'dictCussex', title: '客户性质', sort: true 
-          	          	          		, templet: function (item) {
-                        //获取类型对应的字典label
-                        var datas = "[[${@sysDictService.getType('dictCussex')}]]".replace(/&quot;/g,"\"");
-                        return CoreUtil.selectDictLabel(datas, item.dictCussex);
-                        }
-          	          	},
-          
-	          {field: 'registerDate', title: '注册时间', sort: true 
-          	          	          	},
-          
-	          {field: 'dictCustype', title: '客户类型', sort: true 
-          	          	          		, templet: function (item) {
-                        //获取类型对应的字典label
-                        var datas = "[[${@sysDictService.getType('dictCustype')}]]".replace(/&quot;/g,"\"");
-                        return CoreUtil.selectDictLabel(datas, item.dictCustype);
-                        }
-          	          	},
-          
-	          {field: 'remark', title: '备注', sort: true 
-          	          	          	},
-          
-	          {width: 120, toolbar: "#tool", title: '操作'}
+          {type: 'checkbox', fixed: 'left'},            {field: 'id', title: '', sort: true  ,hide:true  },
+          {field: 'cusname', title: '客户名称', sort: true  },
+          {field: 'money', title: '注册金额', sort: true  },
+          {field: 'cusdesc', title: '客户描述', sort: true  },
+          {field: 'fullname', title: '客户全称', sort: true  },
+          {field: 'dictCussex', title: '客户性质', sort: true 	, templet: function (item) {
+            //获取类型对应的字典label
+            var datas = "[[${@sysDictService.getType('dict_cussex')}]]".replace(/&quot;/g,"\"");
+            return CoreUtil.selectDictLabel(datas, item.dictCussex);
+            }
+ },
+          {field: 'registerDate', title: '注册时间', sort: true  },
+          {field: 'dictCustype', title: '客户类型', sort: true 	, templet: function (item) {
+            //获取类型对应的字典label
+            var datas = "[[${@sysDictService.getType('dict_custype')}]]".replace(/&quot;/g,"\"");
+            return CoreUtil.selectDictLabel(datas, item.dictCustype);
+            }
+ },
+          {field: 'remark', title: '备注', sort: true  },
+          {width: 120, toolbar: "#tool", title: '操作'}
         ]
       ]
       , toolbar: '#toolbar'
     });
-    
-   //日期
-  laydate.render({
-    elem: '#date'
-    ,type: 'datetime'
-  });
+
+	numberInput.render("#money", {
+	    autoSelcet: false,
+	    max: 99999999999,
+	    min: 0,
+		step: 1,
+	    precision: 2
+	});
+ 	//日期
+	laydate.render({
+	    elem: '#registerDate'
+	    ,type: 'datetime'
+    });
 
 
     //表头工具
@@ -248,6 +226,7 @@
           $(".title").html("新增");
 	          $(".operation input[name=id]").val("");
 	          $(".operation input[name=cusname]").val("");
+	          $(".operation input[name=money]").val("");
 	          $(".operation input[name=cusdesc]").val("");
 	          $(".operation input[name=fullname]").val("");
 	          $(".operation input[name=dictCussex]").val("");
@@ -270,15 +249,17 @@
           $(".table_div").hide();
           $(".operation").show();
           $(".title").html("编辑");
-	          $(".operation input[name=id]").val(data.id);
-	          $(".operation input[name=cusname]").val(data.cusname);
-	          $(".operation input[name=cusdesc]").val(data.cusdesc);
-	          $(".operation input[name=fullname]").val(data.fullname);
-	          $(".operation input[name=dictCussex]").val(data.dictCussex);
-	          $(".operation input[name=registerDate]").val(data.registerDate);
-	          $(".operation input[name=dictCustype]").val(data.dictCustype);
-	          $(".operation input[name=remark]").val(data.remark);
-	          break;
+      $(".operation input[name=id]").val(data.id);
+      $(".operation input[name=cusname]").val(data.cusname);
+      $(".operation input[name=money]").val(data.money);
+      $(".operation input[name=cusdesc]").val(data.cusdesc);
+      $(".operation input[name=fullname]").val(data.fullname);
+      $(".operation input[name=dictCussex]").val(data.dictCussex);
+      $(".operation input[name=registerDate]").val(data.registerDate);
+      $(".operation input[name=dictCustype]").val(data.dictCustype);
+      $(".operation input[name=remark]").val(data.remark);
+		  form.render();
+          break;
       }
     });
 
@@ -355,20 +336,20 @@
   //lay-verify="required|account" lay-min="6" 
   // https://blog.csdn.net/m0_48373030/article/details/108783184
     form.verify({
-  cusname: function(value, item){
+cusname: function(value, item){
             var max = item.getAttribute('lay-max');
             if(value.length >= max){
                 return '客户名称不能大于'+max+'个字符的长度！';
             }
-        }  ,   cusdesc: function(value, item){
+        }  ,  cusdesc: function(value, item){
             var max = item.getAttribute('lay-max');
             if(value.length >= max){
                 return '客户描述不能大于'+max+'个字符的长度！';
             }
-        }  ,     registerDate: function(value, item){
+        }  ,  registerDate: function(value, item){
             var max = item.getAttribute('lay-max');
             if(value.length >= max){
                 return '注册时间不能大于'+max+'个字符的长度！';
             }
-        }  ,        });
+        }  ,      });
 </script>
